<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_main">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/title_settings" />
    </group>

    <group android:id="@+id/group_info">
        <item
            android:id="@+id/ip_info"
            android:icon="@drawable/ic_language_24dp"
            android:title="@string/ip_info_title" />
    </group>

    <group android:id="@+id/group_manual">
        <item
            android:id="@+id/user_manual"
            android:icon="@drawable/ic_description_24dp"
            android:title="@string/title_user_manual" />
    </group>

    <group android:id="@+id/group_id2">
        <!-- place holder for version text at the bottom -->
        <item
            android:id="@+id/placeholder"
            android:enabled="false"
            android:title="" />
    </group>
</menu>
